Various changes to make it actually work

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,10 +2,13 @@
 # defaults file for ansible-role-ssh-hostca-srv
 
 # Port that the ssh host CA service should listen on
-ssh_hostca_port: 8080
+ssh_hostca_port: 8082
 
 # Work dir
 ssh_hostca_workdir: '/var/local/ssh-hostca'
 
 # Path of the private key for the ssh host CA
 ssh_hostca_keypath: "{{ ssh_hostca_workdir }}/hostca"
+
+# The DNS domain for which the known_hosts CA public key is valid
+ssh_hostca_domain: "*.{{ ansible_domain }}"
