--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,11 @@
 ---
 # handlers file for ansible-role-ssh-hostca-srv
+
+- name: privtmp changed
+  command: /usr/bin/systemd-tmpfiles --create /etc/tmpfiles.d/ssh-hostca.conf
+
+- name: reload changed daemons
+  command: /usr/bin/systemctl daemon-reload
+
+- name: restart ssh host CA
+  service: name=ssh-hostca.socket state=restarted
